tests/ui/asm/naked-functions-testattrs.stderr
error[E0736]: cannot use `#[naked]` with testing attributes
  --> $DIR/naked-functions-testattrs.rs:11:1
   |
LL | #[test]
   | ------- function marked with testing attribute here
LL | #[naked]
   | ^^^^^^^^ `#[naked]` is incompatible with testing attributes

error[E0736]: cannot use `#[naked]` with testing attributes
  --> $DIR/naked-functions-testattrs.rs:19:1
   |
LL | #[test]
   | ------- function marked with testing attribute here
LL | #[naked]
   | ^^^^^^^^ `#[naked]` is incompatible with testing attributes

error[E0736]: cannot use `#[naked]` with testing attributes
  --> $DIR/naked-functions-testattrs.rs:27:1
   |
LL | #[test]
   | ------- function marked with testing attribute here
LL | #[naked]
   | ^^^^^^^^ `#[naked]` is incompatible with testing attributes

error[E0736]: cannot use `#[naked]` with testing attributes
  --> $DIR/naked-functions-testattrs.rs:34:1
   |
LL | #[bench]
   | -------- function marked with testing attribute here
LL | #[naked]
   | ^^^^^^^^ `#[naked]` is incompatible with testing attributes

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0736`.
